BuildingsPy Changelog
---------------------

Version 2.0.0, xxx
^^^^^^^^^^^^^^^^^^
- Improved error reporting when running regression tests in batch mode.
- Corrected bug when creating and then renaming a package with
  buildingspy.development.refactor
- Removed buildingspy.simulate.Simulator.simulate_translated
  as it relies on non-standard Dymola functionality, and does no longer
  work with Dymola 2019.
  Also removed is the function buildingspy.simulate.Simulator.deleteTranslateDirectory
  which was only needed for buildingspy.simulate.Simulator.simulate_translated

Version 1.7.0, June 14, 2018 -- Release 1.7
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Corrected error in buildingspy.development.regressiontest that caused
  variables in plot statements to be ignored if the plot statement was
  longer than one line. Now, an error message will be written for this case.
- Updated buildingspy.development.merger to filter out certain files,
  such as the top-level .c and .mat files.
- Updated buildingspy.development.refactor.move_class() to
  correct a bug that caused package.mo to not be generated
  if the new class is deeper in the class hierarchy.
- Updated buildingspy.development.refactor.write_package_order() to
  correct a bug in generating package.order file for package-level
  constants.
- Extend class buildingspy.development.validator
  to check the consistency and correctness of .mos and .mo files.
- Added validation of .mos/.mo files to unit test script.

Version 1.6.0, March 29, 2017 -- Release 1.6
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- In development.regressiontest.setSinglePackage(packageName), added
  option to provide a comma-separated list to allow checking multiple
  packages.
- In simulate.Simulator, changed quotes of string arguments for
  Modelica parameters.
- In development.regressiontest, added check for redundant connections.
- Updated buildingspy.development.refactor.move_class()
  to allow moving whole packages.